# tractor

./: .gitignore  .travis.yml  305.misc.rst  MANIFEST.in  NEWS.rst  README.md  README.rst  default.nix  flake.nix  pyproject.toml  pytest.ini  requirements-docs.txt  requirements-test.txt  ruff.toml  setup.py  towncrier.toml
.claude/: settings.local.json
.claude/ai_notes/: docs_todos.md
.claude/notes/: rt_vars_lift_plan.md
.claude/skills/: close-wkt  code-review-changes  inter-skill-review  open-wkt  plan-io  prompt-io  py-codestyle  resolve-conflicts  yt-url-lookup
.github/workflows/: ci.yml  docs.yml
ai/conc-anal/: cancel_cascade_too_slow_under_main_thread_forkserver_issue.md  fork_thread_semantics_execution_vs_memory.md  infected_asyncio_under_main_thread_forkserver_hang_issue.md  ria_nursery_removal_plan.md  spawn_time_boot_death_dup_name_issue.md  subint_cancel_delivery_hang_issue.md  subint_fork_blocked_by_cpython_post_fork_issue.md  subint_fork_from_main_thread_smoketest.py  subint_forkserver_mp_shared_memory_issue.md  subint_forkserver_orphan_sigint_hang_issue.md  subint_forkserver_test_cancellation_leak_issue.md  subint_forkserver_thread_constraints_on_pep684_issue.md  subint_sigint_starvation_issue.md  test_register_duplicate_name_daemon_connect_race_issue.md  trio_033_cancel_cascade_slowdown_depth3_issue.md  trio_wakeup_socketpair_busy_loop_under_fork_issue.md
ai/tooling-todos/: logspec_leaf_module_granularity_route_b.md
debugging/: mp_debug.py
docs/: README.rst  _README.rst  conf.py  dev_tips.rst  index.rst  mk_gh_readme.sh
docs/_ext/: d2diagrams.py  marginalia.py
docs/_static/: tractor_hero.html  tractor_logo_hero.html
docs/api/: context.rst  core.rst  devx.rst  discovery.rst  errors.rst  index.rst  ipc.rst  msg.rst  to_asyncio.rst  trionics.rst
docs/diagrams/: actor_tree.d2  context_handshake.d2  debug_lock.d2  error_propagation.d2  infected_aio.d2  runtime_stack.d2  streaming_pipeline.d2
docs/explain/: architecture.rst  index.rst  sc-distributed.rst
docs/github_readme/: _sphinx_readme.rst  conf.py
docs/guide/: asyncio.rst  cancellation.rst  clustering.rst  context.rst  debugging.rst  discovery.rst  index.rst  msging.rst  parallelism.rst  rpc.rst  spawning.rst  streaming.rst  testing.rst
docs/project/: changelog.rst  dev-tips.rst  index.rst
docs/start/: index.rst  install.rst  quickstart.rst
examples/: __main__.py  a_trynamic_first_scene.py  actor_spawning_and_causality.py  actor_spawning_and_causality_with_daemon.py  asynchronous_generators.py  concurrent_actors_primes.py  dedicated_registrar.py  full_fledged_streaming_service.py  infected_asyncio_echo_server.py  ipython_shell.py  multiple_streams_one_portal.py  nested_actor_tree.py  open_ctx_w_nursery.py  quick_cluster.py  remote_error_propagation.py  rpc_bidir_streaming.py  service_daemon_discovery.py  service_discovery.py  streaming_broadcast_fanout.py  typed_payloads.py  uds_transport_actor_tree.py
examples/actors/: most_basic_supervisor.py  mutate_remote_state.py  ray_style_classes.py
examples/advanced_faults/: ipc_failure_during_stream.py  open_ctx_w_nursery.py
examples/debugging/: asyncio_bp.py  debug_mode_hang.py  fast_error_in_root_after_spawn.py  multi_daemon_subactors.py  multi_nested_subactors_error_up_through_nurseries.py  multi_subactor_root_errors.py  multi_subactors.py  open_ctx_modnofound.py  per_actor_debug.py  pm_in_subactor.py  restore_builtin_breakpoint.py  root_actor_breakpoint.py  root_actor_breakpoint_deamon_subactors.py  root_actor_breakpoint_forever.py  (+10 more)
funding/: nlnet_ngi0_PASTE_READY.txt  nlnet_ngi0_commons_draft.md  nlnet_ngi0_commons_draft.prompt.md  nlnet_ngi0_commons_draft_final.prompt.md  nlnet_ngi0_commons_draft_pass3.prompt.md  nlnet_ngi0_commons_draft_rework.prompt.md
newsfragments/: 166.feature.rst  214.feature.rst  229.feature.rst  230.removal.rst  232.removal.rst  234.bugfix  241.feature  243.rst  245.feature.rst  248.feature  257.feature.rst  264.bug.rst  271.feature.rst  278.bug.rst  HOWTO.rst
nooz/: 121.feature.rst  165.feature.rst  239.bugfix.rst  248.trivial.rst  261.misc.rst  264.bugfix.rst  266.bugfix.rst  267.misc.rst  295.misc.rst  295.trivial.rst  298.trivial.rst  300.misc.rst  303.trivial.rst  304.feature.rst  316.misc.rst  317.trivial.rst  318.bug.rst  322.trivial.rst  324.bugfix.rst  329.trivial.rst  333.feature.rst  335.trivial.rst  336.trivial.rst  337.feature.rst  343.trivial.rst  344.bugfix.rst  346.bugfix.rst  349.trivial.rst  356.trivial.rst  358.feature.rst  _template.rst
notes_to_self/: howtodocs.md  howtorelease.md  svgtool.py
piker/: ipc.py  tractor.py
scripts/: cpu-perf-check  hung-dump.xsh  tractor-reap
snippets/: multiaddr_ex.py
tests/: conftest.py  test_2way.py  test_actor_nursery.py  test_advanced_faults.py  test_advanced_streaming.py  test_cancellation.py  test_caps_based_msging.py  test_caps_msging.py  test_child_manages_service_nursery.py  test_clustering.py  test_context_stream_semantics.py  test_context_streams.py  test_debugger.py  test_discovery.py  test_docs_examples.py  test_eventfd.py  test_ext_types_msgspec.py  test_infected_asyncio.py  test_inter_peer_cancellation.py  test_legacy_one_way_streaming.py  test_local.py  test_local_task_broadcast.py  test_log_sys.py  test_multi_host.py  test_multi_program.py  test_oob_cancellation.py  test_pldrx_limiting.py  test_pubsub.py  test_reg_err_types.py  test_remote_exc_relay.py  test_resource_cache.py  test_ring_pubsub.py  test_ringbuf.py  test_ringd.py  test_root_infect_asyncio.py  test_root_runtime.py  test_rpc.py  test_runtime.py  test_shm.py  test_spawning.py  (+6 more)
tractor/: __init__.py  _actor.py  _addr.py  _broadcast.py  _child.py  _clustering.py  _code_load.py  _context.py  _debug.py  _discovery.py  _entry.py  _exceptions.py  _forkserver_hackzorz.py  _forkserver_override.py  _ipc.py  _live_from_tokio.py  _mp_fixup_main.py  _multiaddr.py  _portal.py  _root.py  _rpc.py  _runtime.py  _shm.py  _spawn.py  _state.py  _streaming.py  _supervise.py  _tractor_test.py  _trionics.py  ipc.py  log.py  msg.py  to_asyncio.py
xontrib/: tractor_diag.xsh
(+197 files in other folders)
